[gd_scene load_steps=9 format=3 uid="uid://ljranha307rb"]

[ext_resource type="PackedScene" uid="uid://cq3ylv5dpnugr" path="res://scenes/Unit.tscn" id="1_vamnb"]
[ext_resource type="Script" uid="uid://bgbso4tdas40m" path="res://scripts/enemy.gd" id="2_o5uld"]
[ext_resource type="PackedScene" uid="uid://cwmx1puomc2n6" path="res://scenes/gold.tscn" id="3_eacat"]
[ext_resource type="Resource" uid="uid://bu8deexek7tkq" path="res://scripts/Enemy_data/basic_enemy.tres" id="3_grfqg"]
[ext_resource type="Texture2D" uid="uid://c6vplmpl4q4jr" path="res://assets/sprites/Enemies/Enemy_3.png" id="4_o5uld"]
[ext_resource type="PackedScene" uid="uid://cfn8w6ow1qcmc" path="res://scenes/health_bar.tscn" id="5_grfqg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_grfqg"]
radius = 11.3596
height = 38.0

[sub_resource type="CircleShape2D" id="CircleShape2D_o5uld"]
radius = 100.0

[node name="Enemy" groups=["enemy"] instance=ExtResource("1_vamnb")]
z_index = 3
collision_layer = 2
collision_mask = 5
script = ExtResource("2_o5uld")
push_force = 20
coin_scene = ExtResource("3_eacat")
basic_data = ExtResource("3_grfqg")

[node name="Sprite" parent="Visuals" index="1"]
texture = ExtResource("4_o5uld")

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(-3, -27)
scale = Vector2(1.84865, -1.5005)
shape = SubResource("CapsuleShape2D_grfqg")

[node name="vision_area" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="vision_area" index="0"]
position = Vector2(0, -27)
shape = SubResource("CircleShape2D_o5uld")

[node name="health_bar" parent="." index="4" instance=ExtResource("5_grfqg")]
offset_left = -37.0
offset_top = -82.0
offset_right = -37.0
offset_bottom = -82.0
back_color = Color(0.52549, 0.513726, 0.556863, 0.317647)
fill_color = Color(0.993394, 0.0654491, 7.70092e-07, 1)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
